adds fetch to ecma view

--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -30,7 +30,7 @@
   <h3>To do:</h3>
   <ol class="todo">
     <li>Rework reduce examples in ecma view.</li>
-    <li></li>
+    <li>toss in some ajax: a conventional api call(github) and then a fetch()</li>
     <li><span class="ltred">Potential Blocks:</span></li>
   </ol><br>
   <h3>Done: </h3>
