--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -202,6 +202,13 @@ console.log(sortedMem);
     <pre class="prettyprint w40 ctr">...
 var sortedMem = members.sort((a,b) => a.age> b.age? 1: -1);
 ...</pre>
+<p>Or... Even more readable.</p>
+<pre class="prettyprint w40 ctr">
+var arr = [2, 3, 4, 5, 6, 20, 12, 15];
+arr.sort(function(a,b) {
+  return a-b;
+})
+// [ 2, 3, 4, 5, 6, 12, 15, 20 ]</pre>
   </div>
 
   <div class="framed1 dkbg">
@@ -463,22 +470,20 @@ function CelebConstructor(nickName,phone) {
 }
 </pre>
 
-    <p>Well, she isn't "here", yet... We have to create an instance of her, then ask for a selfie.</p>
+    <p>Well, she isn't "here", yet... We have to create an instance of her, give her a phone, then ask for a selfie.</p>
     <pre class="prettyprint w60 ctr">
 var taylorSwift = new CelebConstructor("Tay-tay", "iPhone X");
 console.log(taylorSwift instanceof CelebConstructor); // true  (...sanity check)
 </pre>
-    <p>I ask for a selfie and she says "sure"!</p>
+    <p>You ask for a selfie and she says "sure"!</p>
     <pre class="prettyprint w60 ctr">
 console.log(taylorSwift.selfieRequest()) // "Sure!"
 </pre>
 
     <p>Enquiring minds want to know what phone she uses.
-      <br />She's shopping around for an endorsement deal with Samsung so she has her publicist announce the public property of
-      the
-      <code>taylorSwift</code> Object
+      <br />She's shopping around for an endorsement deal with Samsung so she has her publicist announce the public property of the<code>taylorSwift</code>Object
       <br /> This is done using a method built on the prototype.
-      <br />A publicist is placed on the CelebConstructor prototype to receive an opinion parameter as a reason for
+      <br />A publicist is placed on the <code>CelebConstructor</code> prototype to receive an opinion parameter as a reason for
       <em>her</em> choice.
       <br /> (This can be used on future celebs created this way...)</p>
     <pre class="prettyprint w60 ctr">
@@ -491,23 +496,22 @@ CelebConstructor.prototype.whatPhone = function(opinion) {
 taylorSwift.whatPhone("it's fancy!"); // Tay-tay likes the iPhone X because it's fancy!
 </pre>
 
-    <h2 class="chtitle wh">Let's discuss something
-      <code>Private</code>
-    </h2>
+    <h2 class="chtitle wh">Let's discuss something<code>Private</code></h2>
     <p>There are "Private Methods" & "Private variables"
       <br /> Private members are made by the constructor. Ordinary vars and parameters of the constructor become the private members.
     </p>
 
     <div class="framed1 w60 ctr">
-      function CelebConstructor(nickName, phone,
-      <span class="orange">prop</span>) { this.phone = phone; this.nickName = nickName; this.selfieResponse = "Sure!";
-      <span class="orange">var email = "taytay@gmail.com";</span>
-      <span class="orange">var selfieLimit = prop;</span>
-      <span class="paleY">var that = this;</span> this.selfieRequest = function() { return this.selfieResponse; }; } var tay = new CelebConstructor('Tay-tay',
-      'iPhoneX', 3); tay.selfieRequest();
-      <i class="ltgreen">// Sure!</i> tay.nickName;
-      <i class="ltgreen"> // Tay-tay</i> tay.email;
-      <i class="ltgreen"> // undefined</i>
+     <pre> function CelebConstructor(nickName, phone,
+        <span class="orange">prop</span>) { this.phone = phone; this.nickName = nickName; this.selfieResponse = "Sure!";
+        <span class="orange">var email = "taytay@gmail.com";</span>
+        <span class="orange">var selfieLimit = prop;</span>
+        <span class="paleY">var that = this;</span> this.selfieRequest = function() { return this.selfieResponse; }; } var tay = new CelebConstructor('Tay-tay',
+        'iPhoneX', 3); tay.selfieRequest();
+        <i class="ltgreen">// Sure!</i> tay.nickName;
+        <i class="ltgreen"> // Tay-tay</i> tay.email;
+        <i class="ltgreen"> // undefined</i>
+      </pre>
     </div>
     <h4>This constructor makes three private instance variables: prop, selfieLimit, and that.
       <br />They are attached to the object, but they are not accessible to the outside, nor are they accessible to the object's
