--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -21,6 +21,24 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Thursday November 30th, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">The 4 rules of 'this' with kyle simpson's advanced javascript. I love the guy, but he's making me nuts with the foo/bar/baz. Yes it's simple, but it's distracting and deprives students of an appreciation for the practical significance of a thing.  <a></a></h3>
+  <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
+    <p lang="en" dir="ltr">I just published “This in JavaScript” <a href="https://t.co/Tmmk6CQBRV">https://t.co/Tmmk6CQBRV</a></p>&mdash; Zell Liew 🤗 (@zellwk) <a href="https://twitter.com/zellwk/status/928456567753723907?ref_src=twsrc%5Etfw">November 9, 2017</a></blockquote>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Notes on Kyle Simpson's 'this' rules.</li>
+    <li>Entry on call/apply/bind() --One that actually explains it well.</li>
+    <li><span class="ltred">Potential Blocks:</span></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
+
   <h2 class="date">Tuesday November 28th, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
   <h3 class="subtitle">Revisiting higher order functions and replacing more examples of .reduce() in order to make it clearer for visitors and for myself. reduce() is the most urgent one...then back to closures. Would like to do one on thunks Perhaps I'll have time this week.</h3>
@@ -35,7 +53,8 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+      <li>ajax is done</li>
+      <li>reduce is half-done</li>
   </ol>
   <hr />
 
@@ -68,7 +87,7 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+  <li>Curriculum lesson5 in the can! --woohoo!</li>
   </ol>
 <hr />
 
