--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -8,6 +8,67 @@
     <pre>
       <!--entire page pre-->
 
+<div class="simple-wine-frame ctr brdr-w">
+  <h1 class="chtitle">Contrived example of fizzbuzz illstrating the use of .bind()</h1>
+  <p></p>
+<pre class="prettyprint w60 ctr">'use strict';
+function mod(shout, modulo, testNum) {
+  var work = testNum % modulo;
+    console.log(`${shout} test with ${testNum}`)
+  if (work) {
+    console.log(`${shout} fails with remainder of ${work}`);
+    return false;
+  } else {
+    return true;
+  }
+}
+</pre>
+<p>The<code>shout</code>parameter is to allow for the identification of the type of test</p>
+<p>.bind() here simply copies the function and uses it for it's own, bespoke, purpose.
+  Like call() and apply(), the first parameter establishes the context for this. 
+  (Here, it's not practically significant for this snippet).
+</p>
+
+<pre class="prettyprint w60 ctr">
+// 'this' must be placed in the Fn signature
+var fizztest = mod.bind(this, 'fizz', 3); // ALWAYS will do %3
+var buzztest = mod.bind(this, 'buzz', 5); // ALWAYS will do %5
+
+/* The 'missing' number for the function call above will be fed in future calls of fizztest() & buzztest() */
+
+function fizzbuzzTest(fbNum) {
+  let fizzy = fizztest(fbNum);
+  let buzzy = buzztest(fbNum);
+  if(fizzy && buzzy) {
+    return "fizzbuzz!"
+  } else if (fizzy) {
+    return "fizz!";
+  } else if (buzzy) {
+    return "buzz!";
+  } else {
+    return "nope!";
+  }
+}
+var fb4= fizzbuzzTest(4);
+console.log(fb4)
+/*
+fizz test with 4
+fizz fails with remainder of 1
+buzz test with 4
+buzz fails with remainder of 4
+nope!
+*/
+var fb500= fizzbuzzTest(500);
+console.log(fb500)
+/*
+fizz test with 500
+fizz fails with remainder of 2
+buzz test with 500
+buzz!
+*/
+</pre>
+</div>
+
 <div class="ctr softbrown-fr">
   <h1 class="chtitle">Kyle Simpson's 4 rules of this.</h1 class="chtitle">
   <p> Default rule: implicit /default binding.
