--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -3,11 +3,11 @@
   <div class="journal-entry entry">
 
     <!--
-    <h2 class="date">Tuesday November 28th, 2017</h2>
-    <h4 class="sleep">Slept: 5 hours</h4><br><br>
+    <h2 class="date">Friday December 1st, 2017</h2>
+    <h4 class="sleep">Slept: 7 hours</h4><br><br>
     <h3 class="subtitle">Doing <a></a></h3>
     <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
-      <p lang="en" dir="ltr">I just published “This in JavaScript” <a href="https://t.co/Tmmk6CQBRV">https://t.co/Tmmk6CQBRV</a></p>&mdash; Zell Liew 🤗 (@zellwk) <a href="https://twitter.com/zellwk/status/928456567753723907?ref_src=twsrc%5Etfw">November 9, 2017</a></blockquote>
+      <p lang="en" dir="ltr">One weird trick to improve web performance with CSS Filters 😎 <a href="https://twitter.com/hashtag/perfmatters?src=hash&amp;ref_src=twsrc%5Etfw">#perfmatters</a><a href="https://t.co/loQmRSTBYi">https://t.co/loQmRSTBYi</a></p>&mdash; Una Kravets (@Una) <a href="https://twitter.com/Una/status/927944864414752768?ref_src=twsrc%5Etfw">November 7, 2017</a></blockquote>
     <br>
     <h3>To do:</h3>
     <ol class="todo">
@@ -21,7 +21,24 @@
     </ol>
     <hr />
   -->
-  <h2 class="date">Thursday November 30th, 2017</h2>
+  <h2 class="date">Friday December 1st, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">Working with call/apply/bind. Discovering that my process of incremental studying,forgetting & revisiting the topic and doing exercises is paying off. I have composed succinct examples in codepen and will enter them into codejournal today. <a href="https://twitter.com/anthonypalicea" target="_blank">Javascript the Weird Parts</a> saved the day for me. Hands down one of the best.</h3>
+  <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
+    <p lang="en" dir="ltr">One weird trick to improve web performance with CSS Filters 😎 <a href="https://twitter.com/hashtag/perfmatters?src=hash&amp;ref_src=twsrc%5Etfw">#perfmatters</a><a href="https://t.co/loQmRSTBYi">https://t.co/loQmRSTBYi</a></p>&mdash; Una Kravets (@Una) <a href="https://twitter.com/Una/status/927944864414752768?ref_src=twsrc%5Etfw">November 7, 2017</a></blockquote>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Call/Apply Entry</li>
+    <li>.bind() entry in ecma view</li>
+    <li><span class="ltred">Potential Blocks:</span></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
+<h2 class="date">Thursday November 30th, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">The 4 rules of 'this' with kyle simpson's advanced javascript. I love the guy, but he's making me nuts with the foo/bar/baz. Yes it's simple, but it's distracting and deprives students of an appreciation for the practical significance of a thing.  <a></a></h3>
   <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
