--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -105,9 +105,21 @@ happy(); // Default binding rule... (NB: If 'use strict'; is used... when this i
 </div>
       <hr>
 <div class="ctr softblue-fr">
-  <h1 class="chtitle paleY">This is a nice little puzzle to work through a thorny object</h1>
-<p>You might even find it fun!</p>
-  <pre class="prettyprint ctr w50">
+  <h1 class="chtitle paleY">A nice little puzzle to work through a thorny JSON object</h1>
+<p>You might even find it fun! --Write a sentence with all that is available in this JSON object accessing both keys and values👍🏼</p>
+  <pre class="prettyprint ctr w60">
+<span class="ans sm fRight">
+var I = Object.keys(clues.json[1][1])[0];
+var really = clues.json[1][1].is;
+var love = clues.json[0][1].it;
+var json = Object.keys(clues)[0].toUpperCase();
+var because = Object.keys(clues.json[0][1])[0];
+var it = Object.keys(clues.json[0][1])[1]
+var is = Object.keys(clues.json[1][1])[1];
+var so = Object.keys(clues.json[0][1])[2]
+var much = clues.json[1][1].I;
+var fun = clues.json[0][1].because;
+var exclamation = clues.json[0][1].so;</span>
 var clues = {
   json: [
     [
@@ -127,19 +139,7 @@ var clues = {
     ],
   ],
 };
-/* Make a sentence */
 
-var I = Object.keys(clues.json[1][1])[0];
-var really = clues.json[1][1].is;
-var love = clues.json[0][1].it;
-var json = Object.keys(clues)[0].toUpperCase();
-var because = Object.keys(clues.json[0][1])[0];
-var it = Object.keys(clues.json[0][1])[1]
-var is = Object.keys(clues.json[1][1])[1];
-var so = Object.keys(clues.json[0][1])[2]
-var much = clues.json[1][1].I;
-var fun = clues.json[0][1].because;
-var exclamation = clues.json[0][1].so;
 
 console.log(I, really, love, json, because, it, is, so, much, fun, exclamation)
 </pre>
