--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -31,11 +31,14 @@
   <ol class="todo">
     <li>Call/Apply Entry</li>
     <li>.bind() entry in ecma view</li>
-    <li><span class="ltred">Potential Blocks:</span></li>
+    <li>function currying example</li>
+    <li><span class="ltred">Potential Blocks:</span>none!</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>call/apply done</li>
+    <li>.bind() example added</li>
+    <li></li>
   </ol>
   <hr />
 <h2 class="date">Thursday November 30th, 2017</h2>
@@ -52,7 +55,7 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>call/apply entry begun</li>
   </ol>
   <hr />
 
