--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -21,6 +21,24 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Sunday December 3rd, 2017</h2>
+  <h4 class="sleep">Slept: 5 hours</h4><br><br>
+  <h3 class="subtitle"> <a href="https://frontendmasters.com/courses/js-fundamentals-to-functional/">Bianca Gandolfo</a> accepted a grammer-nazi PR I submitted 5months ago. --Very proud. She also lead me to start an app of employees who are single and looking to have lunch with someone else within the company. 10 people: 5 male and 5 female. Each with 3 food preferences many overlapping amongst them. Function recursively iterates over the JSON object to choose a match. As of yet, it just matches with another employee (but check me in an hour. I reached a huge milestone today understanding currying, it's utility and also stumbling upon a use-case for recursion that ISN'T fibonacci or factorial</h3>
+  <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
+    <p lang="en" dir="ltr">One weird trick to improve web performance with CSS Filters 😎 <a href="https://twitter.com/hashtag/perfmatters?src=hash&amp;ref_src=twsrc%5Etfw">#perfmatters</a><a href="https://t.co/loQmRSTBYi">https://t.co/loQmRSTBYi</a></p>&mdash; Una Kravets (@Una) <a href="https://twitter.com/Una/status/927944864414752768?ref_src=twsrc%5Etfw">November 7, 2017</a></blockquote>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>PlaceholderForTasks</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
+
   <h2 class="date">Friday December 1st, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">Working with call/apply/bind. Discovering that my process of incremental studying,forgetting & revisiting the topic and doing exercises is paying off. I have composed succinct examples in codepen and will enter them into codejournal today. <a href="https://twitter.com/anthonypalicea" target="_blank">Javascript the Weird Parts</a> saved the day for me. Hands down one of the best.</h3>
