--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -21,9 +21,25 @@
     </ol>
     <hr />
   -->
-  <h2 class="date">Sunday December 3rd, 2017</h2>
+    <h2 class="date">Friday December 5th, 2017</h2>
+    <h4 class="sleep">Slept: 7 hours</h4><br><br>
+    <h3 class="subtitle">Node work, es6 work on destructuring exercises, revisiting examples of pass by ref/value and placing a decent example in ecma view.</h3>
+    <br>
+    <h3>To do:</h3>
+    <ol class="todo">
+      <li>pass by ref/val example in ecma view</li>
+      <li></li>
+      <li><span class="ltred">Potential Blocks:</span></li>
+    </ol><br>
+    <h3>Done: </h3>
+    <ol class="done">
+      <li>PLACEHOLDERDONETASKS</li>
+    </ol>
+    <hr />
+
+    <h2 class="date">Sunday December 3rd, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
-  <h3 class="subtitle"> <a href="https://frontendmasters.com/courses/js-fundamentals-to-functional/">Bianca Gandolfo</a> accepted a grammer-nazi PR I submitted 5months ago. --Very proud. She also lead me to start an app of employees who are single and looking to have lunch with someone else within the company. 10 people: 5 male and 5 female. Each with 3 food preferences many overlapping amongst them. Function recursively iterates over the JSON object to choose a match. As of yet, it just matches with another employee (but check me in an hour. I reached a huge milestone today understanding currying, it's utility and also stumbling upon a use-case for recursion that ISN'T fibonacci or factorial</h3>
+  <h3 class="subtitle"> <a href="https://frontendmasters.com/courses/js-fundamentals-to-functional/">Bianca Gandolfo</a> accepted a grammar-nazi PR I submitted 5months ago. --Very proud. She also lead me to start an app of employees who are single and looking to have lunch with someone else within the company. 10 people: 5 male and 5 female. Each with 3 food preferences many overlapping amongst them. Function recursively iterates over the JSON object to choose a match. As of yet, it just matches with another employee (but check me in an hour. I reached a huge milestone today understanding currying, it's utility and also stumbling upon a use-case for recursion that ISN'T fibonacci or factorial</h3>
   <br>
   <h3>To do:</h3>
   <ol class="todo">
